--- a/todo-cli/package.json
+++ b/todo-cli/package.json
@@ -13,7 +13,7 @@
       "prettier --write ."
     ]
   },
-  "author": "somnath",
+  "author": "vamshi",
   "license": "ISC",
   "devDependencies": {
     "eslint": "^8.56.0",
